--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "classnames": "^2.3.1",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-merge-refs": "^2.0.1",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
