--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-merge-refs": "^2.0.1",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
+    "typed.js": "^2.0.12",
     "zod": "^3.17.3"
   },
   "devDependencies": {
