--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "classnames": "^2.3.1",
+    "google-spreadsheet": "^3.3.0",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
     "react": "18.2.0",
@@ -28,6 +29,7 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/google-spreadsheet": "^3.3.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
