--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-spreadsheet": "^3.3.0",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
+    "next-seo": "^5.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.0.1",
