--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/sortable": "^7.0.1",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
     "@trpc/client": "^9.25.3",
@@ -27,6 +29,7 @@
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
     "typed.js": "^2.0.12",
+    "uuid": "^8.3.2",
     "zod": "^3.17.3"
   },
   "devDependencies": {
@@ -35,10 +38,12 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "postcss-nested": "^5.0.6",
     "prisma": "^4.0.0",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
