--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.7",
+    "@tiptap/extension-character-count": "^2.0.0-beta.199",
+    "@tiptap/extension-document": "^2.0.0-beta.199",
+    "@tiptap/extension-paragraph": "^2.0.0-beta.199",
+    "@tiptap/extension-text": "^2.0.0-beta.199",
+    "@tiptap/react": "^2.0.0-beta.199",
+    "@tiptap/starter-kit": "^2.0.0-beta.199",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
