--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "next-seo": "^5.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-media-recorder": "^1.6.6",
     "react-merge-refs": "^2.0.1",
     "react-query": "^3.39.1",
+    "react-share": "^4.4.1",
     "superjson": "^1.9.1",
     "typed.js": "^2.0.12",
     "zod": "^3.17.3"
