--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "next": "12.2.0",
     "next-auth": "^4.8.0",
     "next-seo": "^5.4.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-media-recorder": "^1.6.6",
     "react-merge-refs": "^2.0.1",
     "react-query": "^3.39.1",
     "react-share": "^4.4.1",
+    "react-syntax-highlighter": "^15.5.0",
     "superjson": "^1.9.1",
     "typed.js": "^2.0.12",
     "zod": "^3.17.3"
@@ -47,7 +50,9 @@
     "@types/gtag.js": "^0.0.10",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.5",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
