--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
@@ -28,6 +29,7 @@
     "@trpc/server": "^9.25.3",
     "classnames": "^2.3.1",
     "google-spreadsheet": "^3.3.0",
+    "graphql": "^16.6.0",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
     "next-seo": "^5.4.0",
