feat: kyc and profile loading from google and twitter
Signed-off-by: Rem Kim <rem4ik4ever@gmail.com>

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-query": "^3.39.1",
     "react-share": "^4.4.1",
     "react-syntax-highlighter": "^15.5.0",
+    "reactjs-social-login": "^2.6.1",
     "superjson": "^1.9.1",
     "typed.js": "^2.0.12",
     "zod": "^3.17.3"
