--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-character-count": "^2.0.0-beta.199",
     "@tiptap/extension-document": "^2.0.0-beta.199",
     "@tiptap/extension-paragraph": "^2.0.0-beta.199",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.202",
     "@tiptap/extension-text": "^2.0.0-beta.199",
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
@@ -27,6 +28,7 @@
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "google-spreadsheet": "^3.3.0",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
@@ -44,6 +46,7 @@
     "reactjs-social-login": "^2.6.1",
     "superjson": "^1.9.1",
     "typed.js": "^2.0.12",
+    "yup": "^0.32.11",
     "zod": "^3.17.3"
   },
   "devDependencies": {
