--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "aws-sdk": "^2.1253.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "google-spreadsheet": "^3.3.0",
@@ -46,6 +47,7 @@
     "reactjs-social-login": "^2.6.1",
     "superjson": "^1.9.1",
     "typed.js": "^2.0.12",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11",
     "zod": "^3.17.3"
   },
@@ -57,6 +59,7 @@
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.5",
     "@types/react-syntax-highlighter": "^15.5.5",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
