--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/server": "^9.25.3",
     "aws-sdk": "^2.1253.0",
     "classnames": "^2.3.1",
+    "fathom-client": "^3.5.0",
     "formik": "^2.2.9",
     "google-spreadsheet": "^3.3.0",
     "next": "12.2.0",
